--- a/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/MainPage.xaml
+++ b/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/MainPage.xaml
@@ -9,16 +9,42 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+   
+        <!--<Storyboard x:Name="storyboard2">
+            <DoubleAnimation EnableDependentAnimation="True"
+                AutoReverse="False" Storyboard.TargetName="ellipse"
+                Storyboard.TargetProperty="Width" From="0" To="100" Duration="0:0:01"/>
+        </Storyboard>
+        <Storyboard x:Name="storyboard3">
+            <DoubleAnimation EnableDependentAnimation="True" 
+                AutoReverse="False" Storyboard.TargetName="ellipse"
+                Storyboard.TargetProperty="Height" From="0" To="100" Duration="0:0:01"/>
+        </Storyboard>-->
+
+    
     <RelativePanel>
-        <ListBox x:Name="listBoxPrueba" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignLeftWithPanel="True">
+        <ListBox  x:Name="listBoxPrueba" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignLeftWithPanel="True">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
                     <ut:clsCircularPanel/>
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
             <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Button CornerRadius="90" Height="64" Width="64"/>
+                <DataTemplate >
+                    <StackPanel>
+                        <StackPanel.Resources>
+                            <Storyboard x:Name="storyboard">
+                                <ColorAnimation Storyboard.TargetName="colors" Storyboard.TargetProperty="Color"
+                            From="Red" To="Yellow" Duration="0:0:2" AutoReverse="True" RepeatBehavior="Forever" BeginTime="0:0:4"/>
+                            </Storyboard>
+                        </StackPanel.Resources>
+                        <Button CornerRadius="90" Height="64" Width="64">
+                            <Button.Background>
+                                <SolidColorBrush x:Name="colors" Color="Red">
+                                </SolidColorBrush>
+                            </Button.Background>
+                        </Button>
+                    </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
