--- a/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/GamePage.xaml
+++ b/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/GamePage.xaml
@@ -2,23 +2,57 @@
     x:Class="Trabajo_DEINT_PasapalabraUI.Views.GamePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ut="using:Trabajo_DEINT_PasapalabraUI.Utils"
     xmlns:local="using:Trabajo_DEINT_PasapalabraUI.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:ui="using:Microsoft.Toolkit.Uwp.UI"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-    
-    
-    <!--PAGINA DE COMIENZO QUE POR AHORA ESTOY USANDO PARA PRUEBAS-->
+
     <Page.Resources>
+        <Storyboard x:Name="storyboard4">
+                <DoubleAnimation x:Name="doubleAnimation" Duration="0:0:5" To="100" Storyboard.TargetName="bn" Storyboard.TargetProperty="(Border.RenderTransform).(CompositeTransform.TranslateX)" d:IsOptimized="True"
+                                 RepeatBehavior="Forever" AutoReverse="True"/>
+            <DoubleAnimation  Duration="0:0:5" To="-1000" Storyboard.TargetName="bn" Storyboard.TargetProperty="(Border.RenderTransform).(CompositeTransform.TranslateY)" d:IsOptimized="True"
+                                 RepeatBehavior="Forever" AutoReverse="True"/>
+
+            </Storyboard>
+    </Page.Resources>
+
+    <RelativePanel>
+        <RelativePanel.Background>
+            <ImageBrush ImageSource="/Assets/Images/fondo_pasapalabra.jpeg"></ImageBrush>
+        </RelativePanel.Background>
+        <StackPanel x:Name="stckMenu" BorderBrush="White" BorderThickness="15" Padding="80" CornerRadius="100" RelativePanel.AlignHorizontalCenterWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True">
+            <StackPanel.Background>
+                <SolidColorBrush Color="White" Opacity="0.4"></SolidColorBrush>
+            </StackPanel.Background>
+            <TextBlock Margin="0,10,0,40" FontSize="88" FontWeight="Bold" Foreground="White" FontFamily="Keedy Sans" 
+                       VerticalAlignment="Center" HorizontalAlignment="Center" Text="PASAPALABRA"/>
+            <Button FontFamily="Keedy Sans" HorizontalAlignment="Center" Command="{Binding Jugar}" BorderBrush="Black"  Background="White" CornerRadius="5" FontSize="20" Foreground="Black" FontWeight="SemiBold">PLAY</Button>
+            <Button x:Name="btnPuntuacion" HorizontalAlignment="Center" BorderBrush="Black"  Background="White" Margin="0,15,0,0" CornerRadius="5" FontSize="20" Foreground="Black" FontWeight="SemiBold"
+            Command="{Binding VerPuntuacion}" CommandParameter="{Binding ElementName=btnPuntuacion}" FontFamily="Keedy Sans">SCOREBOARD</Button>
+        </StackPanel>
+        <Border BorderThickness="2" Canvas.ZIndex="-99" BorderBrush="White" x:Name="bn" RelativePanel.Below="stckMenu" RelativePanel.AlignHorizontalCenterWithPanel="True" Margin="10" Background="Blue" Padding="10" CornerRadius="25" Width="50" Height="50">
+            <Border.RenderTransform>
+                <CompositeTransform CenterX="0" CenterY="0"/>
+            </Border.RenderTransform>
+            <TextBlock FontWeight="Bold" Foreground="White" FontSize="20" Text="A" HorizontalAlignment="Center" />
+        </Border>
+       
+    </RelativePanel>
+
+   
+    <!--PAGINA DE COMIENZO QUE POR AHORA ESTOY USANDO PARA PRUEBAS-->
+    <!--<Page.Resources>
         <ui:AttachedDropShadow x:Key="CommonShadow" Offset="4"/>
         <LinearGradientBrush x:Key="backGr">
             <GradientStop Offset="0" Color="SlateBlue"/>
             <GradientStop Offset="1" Color="AliceBlue"/>
             <GradientStop Offset="2" Color="Blue"/>
         </LinearGradientBrush>
-    </Page.Resources>
-    <RelativePanel>
+    </Page.Resources>-->
+    <!--<RelativePanel>
         <Button x:Name="BackButton" Foreground="Black" Style="{StaticResource NavigationBackButtonSmallStyle}"
                  RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignLeftWithPanel="True"/>
         <TextBlock ui:Effects.Shadow="{StaticResource CommonShadow}"
@@ -26,5 +60,5 @@
                    Text="This is some text with a Shadow!"
                    HorizontalAlignment="Center"/>
         <Rectangle Fill="{StaticResource backGr}" Height="500" Width="500"/>
-    </RelativePanel>
+    </RelativePanel>-->
 </Page>
