--- a/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/MainPage.xaml
+++ b/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/MainPage.xaml
@@ -134,11 +134,11 @@
                            MaxWidth="450"/>
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,30,0,0">
-                    <TextBox PlaceholderText="RESPUESTA" TextAlignment="Center" Margin="50,30,0,0" FontSize="22" CornerRadius="0" BorderBrush="Black" 
+                    <TextBox x:Name="txtRespuesta" PlaceholderText="RESPUESTA" TextAlignment="Center" Margin="50,30,0,0" FontSize="22" CornerRadius="0" BorderBrush="Black" 
                          MaxWidth="240" MinHeight="40" FontFamily="Berlin Sans FB" BorderThickness="0,0,0,2" Background="{ThemeResource AppBarItemBackgroundThemeBrush}"/>
-                    <Button Name="btnMicro" Click="btnMicro_Click"  Height="30" BorderBrush="DarkBlue" BorderThickness="1" CornerRadius="20"
-                        HorizontalAlignment="Center" Margin="20,20,0,0" Padding="0,0,0,0" MinWidth="20" MinHeight="20" Background="{ThemeResource AppBarItemBackgroundThemeBrush}">
-                        <Image Source="/Assets/Images/micro1.png" Opacity="2"></Image>
+                    <Button Name="btnMicro" Click="btnMicro_Click"  Height="40" BorderBrush="DarkBlue" BorderThickness="1" CornerRadius="20" 
+                        HorizontalAlignment="Center" Margin="20,20,0,0" Padding="2,2,2,2" MinWidth="20" MinHeight="20" Background="{ThemeResource AppBarItemBackgroundThemeBrush}">
+                        <Image Source="/Assets/Images/micro1.png" Opacity="2" ></Image>
                     </Button>
                 </StackPanel>
                 <AppBarButton Icon="Accept" CornerRadius="6" Background="CadetBlue" HorizontalAlignment="Center" Margin="0,15,0,0" 
